2011-05-13  Emilio Meschi <emilio.meschi@cern.ch>
	
	* tag V00-19-11
	* changed max paths from 300 to 500 
	and max endpaths from 20 to 30

2011-05-11  Emilio Meschi <emilio.meschi@cern.ch>
	
	* tag V00-19-10
	* added eols to process report struct

2011-03-24  Emilio Meschi <emilio.meschi@cern.ch>
	
	* tag V00-19-09
	* put back forgotten TriggerReportDef.cc
	
2011-03-21  Emilio Meschi <emilio.meschi@cern.ch>
	
	* tag V00-19-08
	* some cleanup of TriggerReportDef and work on improving cpu and 
	rate stat
	* minor addition to Css.h for SMProxyServer

2011-02-04  Emilio Meschi <emilio.meschi@cern.ch>
	
	* tag V00-19-07
	* increased max endpaths to 20 in trs

2011-02-04  Emilio Meschi <emilio.meschi@cern.ch>
	
	* tag V00-19-06
	* rate stat gathering
	
2011-02-03  Emilio Meschi <emilio.meschi@cern.ch>
	
	* tag V00-19-05
	* fix bug in ParameterSetRetriever

2011-01-19  Emilio Meschi <emilio.meschi@cern.ch>
	
	* tag V00-19-04
	* added support for path indices 

2011-01-19  Emilio Meschi <emilio.meschi@cern.ch>
	
	* tag V00-19-03
	* 18-06 migrate to xml buildfile
	* 19-00 macosx compat
	* 19-01 64-bit fix
	* 19-02 remove compile flags
	* 19-03 add support for rate counting 
	*       microstate collection in iDie
	*       various updates
	
2010-10-07  Emilio Meschi <emilio.meschi@cern.ch>
	
	* tag V00-18-06
	* minor improvements to various plugins (excGen etc.)

2010-10-07  Emilio Meschi <emilio.meschi@cern.ch>
	
	* tag V00-18-05
	* addjustments by Elmer

2010-06-02  Emilio Meschi <emilio.meschi@cern.ch>
	
	* tag V00-18-04
	* new features of edmConfigFromDB script
	(as per Philipp's info)


2010-05-17  Emilio Meschi <emilio.meschi@cern.ch>
	
	* tag V00-18-03
	* improve exception messages when rcv fails
	* add missing initialization to some quantities in process reg struct
	
2010-04-28  Emilio Meschi <emilio.meschi@cern.ch>
	
	* tag V00-18-02 (01 used by Bill)
	* add InputTag to both EvFXXX in plugins
	
2010-04-26  Emilio Meschi <emilio.meschi@cern.ch>
	
	* tag V00-18-00