@@ -7,13 +7,16 @@
 #include "DataFormats/Provenance/interface/EventID.h"
 #include "DataFormats/Provenance/interface/Timestamp.h"
 #include "DataFormats/Provenance/interface/ModuleDescription.h"
+#include "DataFormats/Provenance/interface/ParameterSetID.h"
 
 #include "boost/thread/thread.hpp"
 
 #include <string>
 #include <vector>
 
-namespace evf {
+namespace evf{
+
+
 
     class MicroStateService
     {
@@ -23,9 +26,10 @@ namespace evf {
       
       std::string getMicroState1();
       
-      std::string getMicroState2();
+      std::string const &getMicroState2();
 
-      void postBeginJob();
+      void postBeginJob();     
+
       void postEndJob();
       
       void preEventProcessing(const edm::EventID&, const edm::Timestamp&);
@@ -38,15 +42,17 @@ namespace evf {
       void preModule(const edm::ModuleDescription&);
       void postModule(const edm::ModuleDescription&);
 
-      void setMicroState(std::string &);
+      void setMicroState(std::string const &);
       
     private:
 
       std::string microstate1_;
-      std::string microstate2_;
-
+      const std::string init;
+      const std::string done;
+      const std::string input;
+      const std::string fwkovh;
+      const std::string *microstate2_;
       boost::mutex lock_;
-
     };
 
 }
